crates/ruff_python_parser/tests/snapshots/invalid_syntax@expressions__parenthesized__generator.py.snap
---
source: crates/ruff_python_parser/tests/fixtures.rs
input_file: crates/ruff_python_parser/resources/invalid/expressions/parenthesized/generator.py
---
## AST

```
Module(
    ModModule {
        node_index: NodeIndex(None),
        range: 0..21,
        body: Suite {
            range: 0..21,
            node_index: NodeIndex(None),
            statements: [
                Expr(
                    StmtExpr {
                        node_index: NodeIndex(None),
                        range: 0..8,
                        value: Tuple(
                            ExprTuple {
                                node_index: NodeIndex(None),
                                range: 0..8,
                                elts: [
                                    Named(
                                        ExprNamed {
                                            node_index: NodeIndex(None),
                                            range: 1..7,
                                            target: Name(
                                                ExprName {
                                                    node_index: NodeIndex(None),
                                                    range: 1..2,
                                                    id: Name("x"),
                                                    ctx: Store,
                                                },
                                            ),
                                            value: NumberLiteral(
                                                ExprNumberLiteral {
                                                    node_index: NodeIndex(None),
                                                    range: 6..7,
                                                    value: Int(
                                                        1,
                                                    ),
                                                },
                                            ),
                                        },
                                    ),
                                ],
                                ctx: Load,
                                parenthesized: true,
                            },
                        ),
                    },
                ),
                For(
                    StmtFor {
                        node_index: NodeIndex(None),
                        range: 9..19,
                        is_async: false,
                        target: Name(
                            ExprName {
                                node_index: NodeIndex(None),
                                range: 13..14,
                                id: Name("x"),
                                ctx: Store,
                            },
                        ),
                        iter: Name(
                            ExprName {
                                node_index: NodeIndex(None),
                                range: 18..19,
                                id: Name("y"),
                                ctx: Load,
                            },
                        ),
                        body: Suite {
                            range: 19..19,
                            node_index: NodeIndex(None),
                            statements: [],
                        },
                        orelse: Suite {
                            range: 19..19,
                            node_index: NodeIndex(None),
                            statements: [],
                        },
                    },
                ),
            ],
        },
    },
)
```
## Errors

  |
1 | (x := 1, for x in y)
  |          ^^^ Syntax Error: Expected `)`, found `for`
  |


  |
1 | (x := 1, for x in y)
  |                    ^ Syntax Error: Expected `:`, found `)`
  |


  |
1 | (x := 1, for x in y)
  |                     ^ Syntax Error: Expected a statement
  |
