crates/ruff_python_parser/tests/snapshots/invalid_syntax@expressions__parenthesized__missing_closing_paren_0.py.snap
---
source: crates/ruff_python_parser/tests/fixtures.rs
input_file: crates/ruff_python_parser/resources/invalid/expressions/parenthesized/missing_closing_paren_0.py
---
## AST

```
Module(
    ModModule {
        node_index: NodeIndex(None),
        range: 0..47,
        body: Suite {
            range: 0..47,
            node_index: NodeIndex(None),
            statements: [
                Expr(
                    StmtExpr {
                        node_index: NodeIndex(None),
                        range: 46..47,
                        value: Name(
                            ExprName {
                                node_index: NodeIndex(None),
                                range: 47..47,
                                id: Name(""),
                                ctx: Invalid,
                            },
                        ),
                    },
                ),
            ],
        },
    },
)
```
## Errors

  |
1 | # Missing closing parentheses 0: No elements
2 |
3 | (
  |  ^ Syntax Error: unexpected EOF while parsing
  |
