crates/ruff_python_parser/tests/snapshots/invalid_syntax@expressions__parenthesized__missing_closing_paren_2.py.snap
---
source: crates/ruff_python_parser/tests/fixtures.rs
input_file: crates/ruff_python_parser/resources/invalid/expressions/parenthesized/missing_closing_paren_2.py
---
## AST

```
Module(
    ModModule {
        node_index: NodeIndex(None),
        range: 0..146,
        body: Suite {
            range: 0..146,
            node_index: NodeIndex(None),
            statements: [
                Expr(
                    StmtExpr {
                        node_index: NodeIndex(None),
                        range: 136..146,
                        value: Tuple(
                            ExprTuple {
                                node_index: NodeIndex(None),
                                range: 136..146,
                                elts: [
                                    NumberLiteral(
                                        ExprNumberLiteral {
                                            node_index: NodeIndex(None),
                                            range: 137..138,
                                            value: Int(
                                                1,
                                            ),
                                        },
                                    ),
                                    BinOp(
                                        ExprBinOp {
                                            node_index: NodeIndex(None),
                                            range: 141..146,
                                            left: Name(
                                                ExprName {
                                                    node_index: NodeIndex(None),
                                                    range: 141..142,
                                                    id: Name("x"),
                                                    ctx: Load,
                                                },
                                            ),
                                            op: Add,
                                            right: Name(
                                                ExprName {
                                                    node_index: NodeIndex(None),
                                                    range: 145..146,
                                                    id: Name("y"),
                                                    ctx: Load,
                                                },
                                            ),
                                        },
                                    ),
                                ],
                                ctx: Load,
                                parenthesized: true,
                            },
                        ),
                    },
                ),
            ],
        },
    },
)
```
## Errors

  |
4 | (1,
5 |
6 | x + y
  |      ^ Syntax Error: unexpected EOF while parsing
  |
